--- a/HTML/HTMLCSS 1/main.html
+++ b/HTML/HTMLCSS 1/main.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Titulo</title>
 </head>
 <body>
-    
+    <h1>Titulo 1</h1>
+    <p>Paragrafo</p>
+    <p>Ja aprendi isso, mas tem q fazer o curso ne?</p>
+    <img src="Capturar.JPG" alt="">
 </body>
 </html>
