--- a/HTML/HTMLCSS 2/index.html
+++ b/HTML/HTMLCSS 2/index.html
@@ -9,11 +9,15 @@
 <body>
     <header></header>
     <main class="apr">
-        <h1>Eleve seu negócio digital a outro nível <strong class="titulo-destaque">com um Front-end de qualidade!</strong></h1>
-        <p>Olá! Sou Diego Sinhorini, desenvolvedor Front-end com <strong>especialidade em React, HTML e CSS</strong>. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
-        <img src="Capturar.JPG" alt="Exemplo">
-        <a href="https://github.com/BodeDimitri">GitHub</a>
-        <a href="https://www.linkedin.com/in/diego-cesar-sinhorini-albino-dsa/">linkedin</a>
+        <section class="apr_conteudo">
+            <h1 class="apr_conteudo_titulo">Eleve seu negócio digital a outro nível <strong class="titulo-destaque">com um Front-end de qualidade!</strong></h1>
+            <p class="apr_conteudo_corpo">Olá! Sou Diego Sinhorini, desenvolvedor Front-end com <strong>especialidade em React, HTML e CSS</strong>. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+            <div class="apr_links">
+                <a class="apr_links_github" href="https://github.com/BodeDimitri">GitHub</a>
+                <a class="apr_links_github" href="https://www.linkedin.com/in/diego-cesar-sinhorini-albino-dsa/">Linkedin</a>
+            </div>
+        </section>
+        <img src="Capturar.JPG" alt="Exemplo" class="apr_imagem">
     </main>
     <footer></footer>
 </body>
