--- a/HTML/HTMLCSS 3/about.html
+++ b/HTML/HTMLCSS 3/about.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <header class="cabecalho">
+        <nav class="cabecalho_menu">
+            <a class="cabecalho_menu_link" href="index.html">Home</a>
+            <a class="cabecalho_menu_link" href="about.html">Sobre mim</a>
+        </nav>
+    </header>
+    <main class="apr">
+        <section class="apr_conteudo">
+            <h1 class="apr_conteudo_titulo">Sobre mim</h1>
+            <p class="apr_conteudo_corpo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam harum debitis, ea eius obcaecati ducimus aspernatur maiores id optio labore incidunt in laboriosam velit rerum. Rem hic quia sunt assumenda?</p>
+            <p class="apr_conteudo_corpo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis fugiat ut et voluptas asperiores minus dolore repudiandae libero placeat minima aspernatur, officiis, harum nulla quam omnis id beatae exercitationem in!</p>
+        </section>
+        <img class="apr_imagem" src="assets/Capturar.JPG" alt="">
+    </main>
+    <footer class="rodape">
+        <p class="rodape_texto">Desenvolvido por </p>
+    </footer>
 </body>
 </html>
