--- a/HTML/HTMLCSS 5/index.html
+++ b/HTML/HTMLCSS 5/index.html
@@ -8,11 +8,14 @@
 </head>
 <body>
     <section class="principal container">
-        <h1>
-            Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.
-        </h1>
-        <img src="assets/Combo.png" alt="O combo+ e a junção do Alura+ e Alura lingua">
-        <a class="principal_botao" href="">Assine por 12x de R$ 120,00*</a>
+        <div>
+            <h1>
+                Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.
+            </h1>
+            <img src="assets/Combo.png" alt="O combo+ e a junção do Alura+ e Alura lingua">
+            <a class="principal_botao" href="">Assine por 12x de R$ 120,00*</a>
+            <a  class="principal_botao2">Assinar somente o Alura+</a>
+        </div>
     </section>
 </body>
 </html>
