--- a/HTML/HTMLCSS Grid/index.html
+++ b/HTML/HTMLCSS Grid/index.html
@@ -10,10 +10,14 @@
     <div class="grid">
         <header class="header">header 100px</header>
         <nav class="nav">nav 50px</nav>
-        <section class="section">section 30px</section>
-        <article class="article">article 70px</article>
-        <article class="article">article 60px</article>
-        <article class="article">article 50px</article>
+            <section class="section">section 30px</section>
+                <main class="teste">
+                    <article class="article">article 70px</article>
+                    <article class="article">article 60px</article>
+                    <article class="article">article 50px</article>
+                    <article class="article">article 50px</article>
+                    <article class="article">article 50px</article>
+                </main>
         <footer class="footer">footer 20px</footer>
     </div>
 </body>
