--- a/HTML/HTMLCSS 5 fazendo/index.html
+++ b/HTML/HTMLCSS 5 fazendo/index.html
@@ -8,13 +8,21 @@
 </head>
 <body>
     <section class="principal container">
-        <div>
-            <h1>
+        <div class="container__caixa">
+            <h1 class="container_titulo">
                 Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.
             </h1>
-            <img src="assets/Combo.png" alt="O combo+ e a junção do Alura+ e Alura lingua">
-            <a class="principal_botao" href="">Assine por 12x de R$ 120,00*</a>
-            <a  class="principal_botao2">Assinar somente o Alura+</a>
+            <img class="container_imagem" src="assets/Combo.png" alt="O combo+ e a junção do Alura+ e Alura lingua">
+            <a class="principal_botao" href="">Assine por 12x de R$ 120,00</a>
+            <a  class="principal_botao2" href="">Assinar somente o Alura+</a>
+            <p class="container_aviso">Abre o figmaaa</p>
+        </div>
+    </section>
+    <section class="container secundario">
+        <img class="secundario__img" src="assets/Plataformas.png" alt="Computador e celular com o Alura+ aberto.">
+        <div class="container__descricao">
+            <h2 class="descricao_titulo">Assista do seu jeito</h2>
+            <p class="descricao_p">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
         </div>
     </section>
 </body>
