--- a/HTML/HTMLCSS Grid2/index.html
+++ b/HTML/HTMLCSS Grid2/index.html
@@ -8,10 +8,23 @@
 </head>
 <body>
     <div class="container_grid">
-        <header class="o-header">Header</header>
-        <aside class="o-aside">Aside</aside>
-        <main class="o-footer">Main</main>
-        <footer class="o-footer">Footer</footer>
+        <header class="header">Header</header>
+        <aside class="aside">Aside</aside>
+        <main class="main">Main
+            <div class="container__main">
+                <section>Section</section>
+                <section>Section</section>
+                <section>Section</section>
+                <section>Section</section>
+            </div>
+            <div class="container__main2">
+                <section>Section</section>
+                <section>Section</section>
+                <section>Section</section>
+                <section>Section</section>
+            </div>
+        </main>
+        <footer class="footer">Footer</footer>
     </div>
 </body>
 </html>
