--- a/HTML/HTMLCSS Grid2/index.html
+++ b/HTML/HTMLCSS Grid2/index.html
@@ -23,6 +23,10 @@
                 <section>Section</section>
                 <section>Section</section>
             </div>
+            <div class="container__main3">
+                <section class="invest">a</section>
+                <section class="invest">a</section>
+            </div>
         </main>
         <footer class="footer">Footer</footer>
     </div>
