--- a/HTML/HTMLCSS 5 fazendo/index.html
+++ b/HTML/HTMLCSS 5 fazendo/index.html
@@ -25,5 +25,13 @@
             <p class="descricao_p">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
         </div>
     </section>
+
+    <section class="container secundario">
+        <div class="container__descricao">
+            <p class="descricao_p">Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
+            <a class="principal_botao botao2" href="">Assinar o Combo+</a>
+        </div>
+        <img src="assets/Telas.png" alt="Tela do Alura+ e do Alura Lingua" class="secundario__img img2">
+    </section>
 </body>
 </html>
