--- a/HTML/HTMLCSS 6/index.html
+++ b/HTML/HTMLCSS 6/index.html
@@ -9,6 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,500;0,700;1,400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
     <title>AluraBooks</title>
 </head>
 <body>
@@ -27,11 +30,28 @@
                     <li class="lista-menu__item"><a class="lista-menu__link" href="#">Design & UX</a></li>  
                 </ul>
                 <img class="container__imagem" src="assets/Logo.svg" alt="">
+                <h1 class="container__titulo"><b class="container__titulo--negrito">Alura</b>Books</h1>
         </div>
+        <ul class="opcoes">
+            <input type="checkbox" id="opcoes-menu" class="opcoes__botao">
+            <label for="opcoes-menu">
+                <li class="opcoes__item">Categorias</li>
+            </label>
+
+                <ul class="lista-menu">
+                    <li class="lista-menu__item"><a class="lista-menu__link" href="#">Programação</a></li>
+                    <li class="lista-menu__item"><a class="lista-menu__link" href="#">Front-End</a></li>
+                    <li class="lista-menu__item"><a class="lista-menu__link" href="#">Infraestrutura</a></li>
+                    <li class="lista-menu__item"><a class="lista-menu__link" href="#">Bussines</a></li>
+                    <li class="lista-menu__item"><a class="lista-menu__link" href="#">Design & UX</a></li>  
+                </ul>
+            <li class="opcoes__item"><a href="#" class="opcoes__link">Favoritos</a></li>
+            <li class="opcoes__item"><a href="#" class="opcoes__link">Minha estante</a></li>
+        </ul>
         <div class="container">
-            <a class="container__imagem" href="#"><img src="assets/Favoritos.svg" alt=""></a>
+            <a class="container__imagem container__imagem-transparente" href="#"><img src="assets/Favoritos.svg" alt=""></a>
             <a class="container__imagem" href="#"><img src="assets/Compras.svg" alt=""></a>
-            <a class="container__imagem" href="#"><img src="assets/Usuário.svg" alt=""></a>
+            <a class="container__imagem " href="#"><img src="assets/Usuário.svg" alt=""></a>
         </div>
     </header>
     <section class="banner">
@@ -143,9 +163,10 @@
 			<li class="topicos__item"><a class="topicos__link" href="#">Java</a></li>
 		</ul>
 	</section class='contato'>
+    <div class="contato__descricao">
 		<h2 class="contato__titulo">Fique por dentro das novidades!</h2>
 		<p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros.</p>
-
+    </div>
 		<input class="contato__email" type="email" placeholder="Cadastre seu e-mail">
     </section>
 
@@ -155,6 +176,34 @@
 		<h2 class="rodape__titulo">
 			Grupo Alura
 		</h2>
+        <ul class="lista-rodape">
+            <li class="lista-rodape__titulo">Grupo Alura</li>
+            <li class="lista-rodape__item"><img src="assets/CasaDoCodigo.svg" alt="Logo da Casa do código"><a href="#" class="lista-rodape__link">Casa do código</a></li>
+            <li class="lista-rodape__item"><img src="assets/Caelum.svg" alt="Logo da Caelum"><a href="#" class="lista-rodape__link">Caelum</a></li>
+        </ul>
+
+        <ul class="lista-rodape">
+            <li class="lista-rodape__titulo">Educação Online</li>
+            <li class="lista-rodape__item"><img src="assets/Alura.svg" alt="Logo da Alura"><a href="#" class="lista-rodape__link">Alura</a></li>
+            <li class="lista-rodape__item"><img src="assets/AluraEmpresas.svg" alt="Logo da Alura para empresas"><a href="#" class="lista-rodape__link">Alura para empresas</a></li>
+            <li class="lista-rodape__item"><img src="assets/AluraLatam.svg" alt="Logo da Alura Latam"><a href="#" class="lista-rodape__link">Alura Latam</a></li>
+            <li class="lista-rodape__item"><img src="assets/AluraStart.svg" alt="Logo da Alura Start"><a href="#" class="lista-rodape__link">Alura Latam</a></li>
+            <li class="lista-rodape__item"><img src="assets/MusicDot.svg" alt="Logo da Music Dot"><a href="#" class="lista-rodape__link">Music Dot</a></li>
+            <li class="lista-rodape__item"><img src="assets/AluraLingua.svg" alt="Logo da Alura Língua"><a href="#" class="lista-rodape__link">Alura Língua</a></li>
+            <li class="lista-rodape__item"><img src="assets/PM3.svg" alt="Logo da PM3"><a href="#" class="lista-rodape__link">PM3</a></li>
+        </ul>
+
+        <ul class="lista-rodape">
+            <li class="lista-rodape__titulo">Comunidade</li>
+            <li class="lista-rodape__item"><img src="assets/HipstersTech.svg" alt="Logo da Hipsters Tech"><a href="#" class="lista-rodape__link">Hipsters Tech</a></li>
+            <li class="lista-rodape__item"><img src="assets/Scuba.svg" alt="Logo da Scuba Dev"><a href="#" class="lista-rodape__link">Scuba Dev</a></li>
+            <li class="lista-rodape__item"><img src="assets/Layers.svg" alt="Logo da layers ponto Tech"><a href="#" class="lista-rodape__link">Layers ponto Tech</a></li>
+            <li class="lista-rodape__item"><img src="assets/LikeABoss.svg" alt="Logo da Like a Boss"><a href="#" class="lista-rodape__link">Like a Boss</a></li>
+            <li class="lista-rodape__item"><img src="assets/CarreiraSemFronteira.svg" alt="Logo da Carreira Sem Fronteira"><a href="#" class="lista-rodape__link">Carreira sem Fronteira</a></li>
+            <li class="lista-rodape__item"><img src="assets/HipstersJobs.svg" alt="Hipsters Jobs"><a href="#" class="lista-rodape__link">Hipsters Jobs</a></li>
+            <li class="lista-rodape__item"><img src="assets/GUJ.svg" alt="Logo da GUJ"><a href="#" class="lista-rodape__link">GUJ</a></li>
+        </ul>
+        
 	</footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
