--- a/HTML/HTMLCSS 6/index.html
+++ b/HTML/HTMLCSS 6/index.html
@@ -18,7 +18,7 @@
     <header class="cabecalho">
         <div class="container">
             <input type="checkbox" id="menu" class="container__botao">
-            <label for="menu">
+            <label for="menu" class="container__rotulo">
                 <span class="cabecalho__menu-hamburguer container__imagem container__imagem1"></span>
             </label>
                 <ul class="lista-menu">
@@ -34,10 +34,9 @@
         </div>
         <ul class="opcoes">
             <input type="checkbox" id="opcoes-menu" class="opcoes__botao">
-            <label for="opcoes-menu">
+            <label for="opcoes-menu" class="opcoes__rotulo">
                 <li class="opcoes__item">Categorias</li>
             </label>
-
                 <ul class="lista-menu">
                     <li class="lista-menu__item"><a class="lista-menu__link" href="#">Programação</a></li>
                     <li class="lista-menu__item"><a class="lista-menu__link" href="#">Front-End</a></li>
@@ -49,9 +48,17 @@
             <li class="opcoes__item"><a href="#" class="opcoes__link">Minha estante</a></li>
         </ul>
         <div class="container">
-            <a class="container__imagem container__imagem-transparente" href="#"><img src="assets/Favoritos.svg" alt=""></a>
-            <a class="container__imagem" href="#"><img src="assets/Compras.svg" alt=""></a>
-            <a class="container__imagem " href="#"><img src="assets/Usuário.svg" alt=""></a>
+            <a class="container__imagem container__imagem-transparente" href="#">
+                <img src="assets/Favoritos.svg" alt="">
+            </a>
+            <a class="container__imagem container__link" href="#">
+                <img src="assets/Compras.svg" alt="">
+                <p class="container__texto">Minha Sacola</p>
+            </a>
+            <a class="container__imagem container__link" href="#">
+                <img src="assets/Usuário.svg" alt="">
+                <p class="container__texto">Meu Perfil</p>
+            </a>
         </div>
     </header>
     <section class="banner">
@@ -62,6 +69,7 @@
     <section class="carrosel">
         <h2 class="carrossel__titulo">ÚLTIMOS LANÇAMENTOS</h2>
         <!-- Slider main container -->
+<div class="carrossel__container">
 <div class="swiper">
     <!-- Additional required wrapper -->
     <div class="swiper-wrapper">
@@ -79,7 +87,6 @@
     <div class="swiper-button-prev"></div>
     <div class="swiper-button-next"></div>
   </div>
-
   <div class="card">
     <!--1 linha-->
     <div class="card__descricao">
@@ -104,11 +111,13 @@
         <a href="#" class="botoes__saibamais">Saiba mais</a>
     </div>
 </div>
+</div>
   </div class='maisvendidos'>
     <div class="maisvendidos__titulo">
         <h2 class="carrossel__titulo">MAIS VENDIDOS</h2>
     </div>
     <!-- Slider main container -->
+    <div class="carrossel__container">
     <div class="swiper">
     <!-- Additional required wrapper -->
     <div class="swiper-wrapper">
@@ -150,6 +159,8 @@
 			<a href="#" class="botoes__saibamais2">Saiba mais</a>
 		</div>
 	</div>
+</div>
+</section>
 
 	<section class="topicos">
 		<h2 class="topicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
