--- a/JS/Front-end/JavaScriptWeb4/index.html
+++ b/JS/Front-end/JavaScriptWeb4/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Número Secreto</h1>
 
-    <h3>O número secreto esta entre <span id="menor-valor">0</span><span> e </span><span id="menor-valor">100</span></h3>
+    <h3>O número secreto esta entre <span id="menor-valor">0</span><span> e </span><span id="maior-valor">100</span></h3>
 
     <div id="chute" class="mensagens">
         <div>Você disse:</div>
@@ -22,5 +22,7 @@
 
     </div>
     <script src="app/sortearNumero.js"></script>
+    <script src="app/reconhecimento.js"></script>
+    <script src="app/validacao.js"></script>
 </body>
 </html>
