--- a/JS/Front-end/js-consumindo-dados-api-main/index.html
+++ b/JS/Front-end/js-consumindo-dados-api-main/index.html
@@ -248,7 +248,7 @@
             </li>
         </ul>
     </footer>
-<script src="./script.js"></script>
+<script src="./script1.js"></script>
 </body>
 
 </html>
