--- a/JS/Front-end/alura_books-projeto_inicial/index.html
+++ b/JS/Front-end/alura_books-projeto_inicial/index.html
@@ -277,6 +277,7 @@
   <script src="app/main.js"></script>
   <script src="app/metodoforEach.js"></script>
   <script src="app/metodoMap.js"></script>
+  <script src="app/metodoFiltrar.js"></script>
 </body>
 
 </html>
