--- a/JS/Front-end/alura_books-projeto_inicial/index.html
+++ b/JS/Front-end/alura_books-projeto_inicial/index.html
@@ -278,6 +278,8 @@
   <script src="app/metodoforEach.js"></script>
   <script src="app/metodoMap.js"></script>
   <script src="app/metodoFiltrar.js"></script>
+  <script src="app/metodosort.js"></script>
+  <script src="app/metodoreduce.js"></script>
 </body>
 
 </html>
